# Waifu_bot_REBORN

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  EQUIPMENT_SYSTEM_PLAN.md  LOGS_ANALYSIS_REPORT.md  README.md  SECURITY.md  SECURITY_CHECK_REPORT.md  docker-compose.staging.yml  docker-compose.yml  pyproject.toml  requirements.txt  run_backfill_group_chats.py  run_backfill_group_chats.sh  run_migrate.py  run_migrate.sh
.test-venv/: pyvenv.cfg
alembic/: env.py
armory_frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
config/: ai_presets.yaml
desktop_client/: .gitignore  README.md  config.example.json  config.json  package.json
docs/: AFFIXES_ACT1.md  AFFIX_SYSTEM_V2_PROPOSAL.md  ARCHITECTURE_AND_INTERACTIONS.md  BOT_COMMANDS_FOR_BOTFATHER.md  CHAT_ACTIVITY_REWARDS.md  COMBAT_FORMULAS.md  DIABLO_PRE_IMPLEMENTATION_KIT.md  DIABLO_SCHEMA_ADAPTATION.md  DOCKER.md  ENDLESS_DUNGEON_PLUS_SCHEMA.md  EQUIPMENT_UI_MODAL_CARD.md  FIX_OPTIMISATION.md  FIX_OPTIMISATION_ANALYSIS.md  GAME_AGENT_BRIEF.md  GAME_AGENT_BRIEF.validation.txt  GD_DEBUG_SYSTEM.md  GD_EVENTS_ANALYSIS.md  GD_V1_DUAL_PATH_AND_COMPACT.md  GROUP_CHAT_SOLO_AND_GD_DIAGNOSTICS.md  GROUP_DUNGEONS_ANALYSIS_AND_PLAN.md  ITEM_BASES_AND_AFFIX_PARALLELISM.md  ITEM_LEVEL_SYSTEM_TABLE_TEMPLATES.md  ITEM_SYSTEM_PRE_IMPLEMENTATION_SPEC.md  ITEM_SYSTEM_TABLE.md  MOBILE_ANDROID_BALANCE.md  MOBILE_ANDROID_DEV_SETUP.md  MOBILE_ANDROID_IMPLEMENTATION_STATUS.md  MOBILE_ANDROID_PLAY_CHECKLIST.md  MOBILE_ANDROID_SMOKE.md  MOBILE_DAY1_CHECKLIST.md  OVERLAY_ANIMATIONS.md  (+24 more)
(+1047 files in other folders)
