[project]
name = "waifu-bot-reborn"
version = "0.1.0"
description = "Telegram IDLE RPG bot with WebApp/SSE"
authors = [{ name = "Shimmirpg", email = "admin@example.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram==3.13.0",
    "fastapi==0.115.5",
    "uvicorn[standard]==0.30.6",
    "pydantic==2.9.2",
    "pydantic-settings==2.7.1",
    "SQLAlchemy==2.0.36",
    "asyncpg==0.29.0",
    "alembic==1.13.3",
    "redis[hiredis]==5.1.1",
    "aiohttp==3.10.10",
    "python-multipart==0.0.9",
    "orjson==3.10.7",
    "httpx==0.27.2",
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100
src_paths = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]


